完善体检信息页面，可直接在view页面点击修改

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -31,15 +31,15 @@
         <div id="main">
             <div class="field" onclick="openWin('patient');">
                 <div class="field_name">维护患者信息</div>
-                <div class="more"><span>&gt;&gt;</span></div>
+                <div class="more"><span>&gt;</span></div>
             </div>
             <div class="field" onclick="openWin('physical');">
                 <div class="field_name">体检</div>
-                <div class="more"><span>&gt;&gt;</span></div>
+                <div class="more"><span>&gt;</span></div>
             </div>
             <div class="field">
                 <div class="field_name">辅助检查</div>
-                <div class="more"><span>&gt;&gt;</span></div>
+                <div class="more"><span>&gt;</span></div>
             </div>
             <div class="field" onclick="openPicker('consultation_department');">
                 <div class="field_name">会诊科室:</div>
