--- a/widget/html/viewPhysical.html
+++ b/widget/html/viewPhysical.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-    <title>体检信息维护</title>
+    <title>体检信息</title>
     <link rel="stylesheet" type="text/css" href="../css/physical.css" />
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
@@ -16,13 +16,13 @@
         <header id='header'>
             <nav id="nav">
                 <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
-                    取消
+                    返回
                 </a>
                 <div id="middle">
-                    <span id="title">体检信息维护</span>
+                    <span id="title">体检信息</span>
                 </div>
-                <a id="right" tapmode="" onclick="savePhysical();" class="button button-raised button-royal">
-                    确认
+                <a id="right" tapmode="" onclick="modiPhysical();" class="button button-raised button-royal">
+                    修改
                 </a>
             </nav>
         </header>
@@ -31,22 +31,22 @@
                 <div class="field_name">视力:</div>
                 <div class="leftColumn">
                     <span>Vod:</span>
-                    <input type="text" class="long" id="vod" onclick="openPicker('vod')" />
+                    <input type="text" class="long" id="vod"/>
                 </div>
                 <div class="rightColumn">
                     <span>Vos:</span>
-                    <input type="text" class="long" id="vos" onclick="openPicker('vos')" />
+                    <input type="text" class="long" id="vos"/>
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">矫正:</div>
                 <div class="leftColumn">
                     <span>Vod:</span>
-                    <input type="text" class="long" id="corrected_vod" onclick="openPicker('corrected_vod')" />
+                    <input type="text" class="long" id="corrected_vod"/>
                 </div>
                 <div class="rightColumn">
                     <span>Vos:</span>
-                    <input type="text" class="long" id="corrected_vos" onclick="openPicker('corrected_vos')" />
+                    <input type="text" class="long" id="corrected_vos"/>
                 </div>
             </div>
             <div class="field">
@@ -115,11 +115,19 @@
 apiready = function() {
     $api.fixIos7Bar($api.dom('header'));
 
-    // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vos'), 'readonly', 'true');
+    $api.attr($api.byId('tod'), 'readonly', 'true');
+    $api.attr($api.byId('tos'), 'readonly', 'true');
+    $api.attr($api.byId('outer_eye'), 'readonly', 'true');
+    $api.attr($api.byId('conjunctiva'), 'readonly', 'true');
+    $api.attr($api.byId('cornea'), 'readonly', 'true');
+    $api.attr($api.byId('anterior_chamber'), 'readonly', 'true');
+    $api.attr($api.byId('lens'), 'readonly', 'true');
+    $api.attr($api.byId('vitreous'), 'readonly', 'true');
+    $api.attr($api.byId('eyeground'), 'readonly', 'true');
 
     model = api.require('model');
     query = api.require('query');
@@ -134,132 +142,73 @@ apiready = function() {
     // 如果主界面传入了id，代表修改，则从数据库查询已有数据
     if (physical_id != undefined && physical_id != null && physical_id != "") {
         showProgress();
-        query.createQuery(function(ret, err) {
-            if (ret && ret.qid) {
-                model.findById({
-                    class: "physical",
-                    id: physical_id
-                }, function(ret, err) {
-                    if (err) {
-                        alert(JSON.stringify(err));
-                    } else {
-                        if (ret) {
-                            setPhysical(ret);
-                        }
-                    }
-                    api.hideProgress();
-                });
-            }
-        });
+        getPhysical();
+    } else {
+        alert("无体检信息！");
+        api.closeWin();
     }
 
     window.closeWin = function(winName) {
         api.closeWin();
     }
 
-    // 设置页面四个视力的值
     api.addEventListener({
-        name: 'returnVision'
+        name: 'refreshViewPhysical'
     }, function(ret, err) {
         if (ret) {
-            $api.byId(ret.value.visionType).value = ret.value.vision;
+            showProgress();
+            getPhysical();
         }
     });
 
 }
 
 /**
- * [savePhysical description]
+ * [getPhysical description]
  * @return {[type]} [description]
  */
-function savePhysical() {
-
-    showProgress();
-
-    if (physical_id != "") {
-        model.updateById({
-            class: 'physical',
-            id: physical_id,
-            value: {
-                vod: $api.byId('vod').value,
-                vos: $api.byId('vos').value,
-                corrected_vod: $api.byId('corrected_vod').value,
-                corrected_vos: $api.byId('corrected_vos').value,
-                tod: $api.byId('tod').value,
-                tos: $api.byId('tos').value,
-                outer_eye: $api.byId('outer_eye').value,
-                conjunctiva: $api.byId('conjunctiva').value,
-                cornea: $api.byId('cornea').value,
-                anterior_chamber: $api.byId('anterior_chamber').value,
-                lens: $api.byId('lens').value,
-                vitreous: $api.byId('vitreous').value,
-                eyeground: $api.byId('eyeground').value
-            }
-        }, function(ret, err) {
-            if (ret) {
-                returnPhysicalId(ret.id);
-                refreshViewPhysical();
+function getPhysical() {
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            model.findById({
+                class: "physical",
+                id: physical_id
+            }, function(ret, err) {
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        setPhysical(ret);
+                    }
+                }
                 api.hideProgress();
-                api.closeWin();
-            } else {
-                alert("修改体检信息失败！" + JSON.stringify(err));
-            }
-        });
-    } else {
-        model.insert({
-            class: 'physical',
-            value: {
-                vod: $api.byId('vod').value,
-                vos: $api.byId('vos').value,
-                corrected_vod: $api.byId('corrected_vod').value,
-                corrected_vos: $api.byId('corrected_vos').value,
-                tod: $api.byId('tod').value,
-                tos: $api.byId('tos').value,
-                outer_eye: $api.byId('outer_eye').value,
-                conjunctiva: $api.byId('conjunctiva').value,
-                cornea: $api.byId('cornea').value,
-                anterior_chamber: $api.byId('anterior_chamber').value,
-                lens: $api.byId('lens').value,
-                vitreous: $api.byId('vitreous').value,
-                eyeground: $api.byId('eyeground').value
-            }
-        }, function(ret, err) {
-            if (ret) {
-                returnPhysicalId(ret.id);
-                refreshViewPhysical();
-                api.hideProgress();
-                api.closeWin();
-            } else {
-                alert("新增体检信息失败！" + JSON.stringify(err));
-            }
-        });
-    }
-}
-
-/**
- * [returnPhysicalId description]
- * @param  {[type]} physical_id [description]
- * @return {[type]}             [description]
- */
-function returnPhysicalId(physical_id) {
-    api.sendEvent({
-        name: 'returnPhysicalId',
-        extra: {
-            physical_id: physical_id
+            });
         }
     });
 }
 
 /**
- * [refreshViewPhysical description]
+ * [modiPhysical description]
  * @return {[type]} [description]
  */
-function refreshViewPhysical() {
-    api.sendEvent({
-        name: 'refreshViewPhysical'
+function modiPhysical() {
+    api.openWin({
+        name: 'physical',
+        url: './physical.html',
+        pageParam: {
+            data: {
+                id: physical_id
+            }
+        },
+        animation: {
+            type: "movein",
+            duration: 300
+        },
+        reload: true,
+        bounces: false
     });
-}
 
+}
 </script>
 
 </html>
