--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -108,6 +108,11 @@ apiready = function() {
 
     window.saveWin = function(winName) {
         // 返回本页的患者信息
+        var name = $api.byId('name').value;
+        if (name == "" || name == null || name == undefined) {
+            alert("请输入患者姓名！");
+            return;
+        }
         returnPatient();
         api.closeWin();
     }
