--- a/widget/html/viewPhysical.html
+++ b/widget/html/viewPhysical.html
@@ -137,16 +137,18 @@ apiready = function() {
         host: 'https://d.apicloud.com'
     });
 
+    history_id = api.pageParam.data.history_id;
     physical_id = api.pageParam.data.id;
 
     // 如果主界面传入了id，代表修改，则从数据库查询已有数据
     if (physical_id != undefined && physical_id != null && physical_id != "") {
         showProgress();
         getPhysical();
-    } else {
-        alert("无体检信息！");
-        api.closeWin();
     }
+    // else {
+    //     alert("无体检信息！");
+    //     api.closeWin();
+    // }
 
     window.closeWin = function(winName) {
         api.closeWin();
@@ -156,6 +158,16 @@ apiready = function() {
         name: 'refreshViewPhysical'
     }, function(ret, err) {
         if (ret) {
+            showProgress();
+            getPhysical();
+        }
+    });
+
+    api.addEventListener({
+        name: 'returnPhysicalId'
+    }, function(ret, err) {
+        if (ret && ret.value) {
+            physical_id = ret.value.physical_id;
             showProgress();
             getPhysical();
         }
@@ -197,7 +209,8 @@ function modiPhysical() {
         url: './physical.html',
         pageParam: {
             data: {
-                id: physical_id
+                id: physical_id,
+                history_id: history_id
             }
         },
         animation: {
@@ -208,6 +221,15 @@ function modiPhysical() {
         bounces: false
     });
 
+}
+
+function returnPhysicalId(physical_id) {
+    api.sendEvent({
+        name: 'returnPhysicalId',
+        extra: {
+            physical_id: physical_id
+        }
+    });
 }
 </script>
 
