--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -44,7 +44,8 @@
     <div id="wrap" class="flex-wrap flex-vertical">
         <header>
             <div class='top-button fl'>
-                <a href="" tapmode="presshover" onclick="openWin('option')">设置</a>
+                <!-- <a href="" tapmode="presshover" onclick="openWin('option')">设置</a> -->
+                <a href="" tapmode="presshover" onclick="logout()">退出</a>
             </div>
             <div class='top-button fr'>
                 <a href="" tapmode="presshover" onclick="openSearch()">查找</a>
@@ -59,5 +60,6 @@
 </body>
 <script type="text/javascript" src="./script/api.js"></script>
 <script type="text/javascript" src="./script/historyList.js"></script>
+<script type="text/javascript" src="./script/util.js"></script>
 
 </html>
