--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -107,15 +107,16 @@ apiready = function() {
     $api.attr($api.byId('treatment'), 'readonly', 'true');
 
     // 设置需要显示的字段值
-    var data = api.pageParam;
-    $api.byId('consultation_department').value = data.consultation_department;
-    $api.byId('diagnosis').value = data.diagnosis;
-    $api.byId('chief_complaint').value = data.chief_complaint;
-    $api.byId('treatment').value = data.treatment;
+    data = api.pageParam;
+    // $api.byId('consultation_department').value = data.consultation_department;
+    // $api.byId('diagnosis').value = data.diagnosis;
+    // $api.byId('chief_complaint').value = data.chief_complaint;
+    // $api.byId('treatment').value = data.treatment;
+    setHistory(data);
     history_id = data.id;
     patient_pointer = data.patient_pointer;
     physical_pointer = data.physical_pointer;
-    $api.byId('patient_info').innerText = patient_pointer.name + " - " + patient_pointer.gender + " - " + patient_pointer.age + "岁";
+    // $api.byId('patient_info').innerText = patient_pointer.name + " - " + patient_pointer.gender + " - " + patient_pointer.age + "岁";
 
     api.addEventListener({
         name: 'returnPhysicalId'
@@ -123,8 +124,47 @@ apiready = function() {
         if (ret && ret.value) {
             physical_pointer = ret.value.physical_id;
             api.sendEvent({
-                name: 'reloadHistory'
+                name: 'reloadHistoryList'
             })
+        }
+    });
+
+    api.addEventListener({
+        name: 'reloadHistory'
+    }, function(ret, err) {
+        if (ret) {
+            getHistory(history_id);
+        }
+    });
+
+}
+
+
+function getHistory(history_id) {
+    showProgress();
+    model = api.require('model');
+    query = api.require('query');
+    model.config({
+        appId: 'A6903478274381',
+        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
+        host: 'https://d.apicloud.com'
+    });
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            model.findById({
+                class: "caseHistory",
+                id: history_id
+            }, function(ret, err) {
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        data = ret;
+                        setHistory(data);
+                    }
+                }
+                api.hideProgress();
+            });
         }
     });
 
@@ -144,7 +184,7 @@ function openWin(type) {
         case "modiHistory":
             page = "history";
             pageParam = {
-                "data": api.pageParam,
+                "data": data,
                 "type": "modi"
             };
             reload = false;
